<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">NoteSquirrel</string>
    <string name="action_settings">Settings</string>
    <string name="save">Save</string>
    <string name="edit_text_hint">Enter Text Here</string>
    <string name="toast_saved">Text Saved to Application</string>
    <string name="toast_not_saved">Unable to write to file. Insufficient space?</string>
    <string name="passpointimage"></string>
	<string name="main_activity_name">Main Activity</string>
	<string name="image_activity_name">Passpoint Image</string>
	<string name="lock">Lock</string>
	<string name="menu_reset_passpoints">Reset Passpoints</string>
    <string name="change_passpoint_image">Change Passpoint Image</string>
	<string name="take_photo">Take Photo</string>
	<string name="select_from_gallery">Select Image from Gallery</string>
	<string name="dummy">dummy</string>
	<string name="dummy1">dummy1</string>
	<string name="dummy2">dummy2</string>
	<string name="funny">funny</string>
</resources>
