<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sidharth.notesquirrel.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/reset_passpoints"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        android:title="@string/menu_reset_passpoints"/>
	
    <item
        android:id="@+id/change_passpoint_image"
        android:orderInCategory="2"
        android:title="@string/change_passpoint_image" >
        
    </item>
    
    <group android:id="@+id/group1" android:enabled="false" android:orderInCategory="4"  >
    <item
        android:id="@+id/dummy"
        android:title="@string/dummy" >
        <menu>
            <item 
                android:id="@+id/dummy1"
        		android:orderInCategory="1"
        		android:title="@string/dummy1">
                
            </item>
            <item 
                android:id="@+id/dummy2"
        		android:orderInCategory="2"
        		android:title="@string/dummy2">
            </item>
        </menu>
    </item>
    <item 
        android:id="@+id/funny"
        android:title="@string/funny" >
    </item>
	</group>
</menu>