<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sidharth.notesquirrel.MainActivity" 
    android:orientation="vertical"
    >

    <EditText
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="0dp" 
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/edit_text_hint"/>
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
        android:layout_height="wrap_content" >
	    <Button
	        android:id="@+id/save"
	        android:text="@string/save"
	        android:layout_width="0dp"
	        android:layout_weight="50"
	        android:layout_height="wrap_content"
	        />
	    <Button
	        android:id="@+id/lock"
	        android:text="@string/lock"
	        android:layout_width="0dp"
	        android:layout_weight="50"
	        android:layout_height="wrap_content"
	        />
	</LinearLayout>

</LinearLayout>
